test/e2e/testdata/httproute-to-backend-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-backend-v1-clusterip
  namespace: gateway-conformance-infra
spec:
  selector:
    app: infra-backend-v1
  ports:
    - protocol: TCP
      port: 8080
      name: http11
      targetPort: 3000
    - protocol: TCP
      port: 8081
      name: http2
      targetPort: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-to-backend-ip
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-ip
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: backend-ip
